Fixed some spacing issues in Mobile View

--- a/style.css
+++ b/style.css
@@ -645,7 +645,7 @@ body {
     }
 }
 
-/*Tablet Size <=480px*/
+/*Moblile Size <=480px*/
 
 @media (max-width: 480px) {
 
@@ -654,7 +654,7 @@ body {
     }
 
     .hero-nav-bar {
-        padding: 12px 16px;
+        padding: 20px 32px;
     }
 
     .hero-nav-bar img {
@@ -667,21 +667,25 @@ body {
     }
 
     .hero-main {
-        padding: 30px 16px;
-        gap: 16px;
+        padding: 128px 16px;
+        gap: 48px;
     }
 
     .main-header {
-        font-size: 24px;
+        font-size: 32px;
         line-height: 1.3;
     }
 
     .sub-header {
-        font-size: 14px;
+        font-size: 20px;
     }
 
     .sub-header-sub {
-        font-size: 13px;
+        font-size: 20px;
+    }
+
+    .sign-up {
+        align-items: center;
     }
 
     .email-input {
